--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>SpaceWalkers</title>
-  
+
   <!-- VIEWPORT for responsive design -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -20,11 +20,22 @@
 <body>
 
  <!-- navigation code here -->
+  <header>
+    <h1>SpaceWalkers</h1>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
+      <a href="#">Sign In</a>
+    </nav>
+  </header>
 
   <div class="container home">
 
     <header class="intro">
        <!-- image code here -->
+       <img src="img/main-header.png" alt="Planet Earth atmosphere from space">
 
       <h2>Lift Off</h2>
     
