--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 
   <div class="container home">
 
-    <header class="intro">
-       <!-- image code here -->
-       <img src="img/main-header.png" alt="Planet Earth atmosphere from space">
+    <section class="intro">
+      <!-- image code here -->
+      <img src="img/main-header.png" alt="Planet Earth atmosphere from space">
 
       <h2>Lift Off</h2>
     
       <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate, that if you touched it with a finger it would fall apart. Seeing this has to change a man.</p>
-    </header>
+    </section>
 
     <section class="space-images">
         <img src="img/blast.png" class="blast" alt="Rocket blasting off">
